Added ngrok url to config.js

--- a/dashboard.html
+++ b/dashboard.html
@@ -18,6 +18,7 @@
 
 <footer><a id="logout" href="#">Log out</a> </footer>
 
+<script src="config.js"></script>
 <script>
   const userToken = localStorage.getItem("userToken");
 
@@ -26,7 +27,7 @@
     window.location.href = "signin.html"; // Not signed in
   } else {
 
-    const BASE_URL = import.meta.env.VITE_API_BASE_URL; // for Vite/ES Modules
+    // const BASE_URL = import.meta.env.VITE_API_BASE_URL; // for Vite/ES Modules
     fetch(`${BASE_URL}/user/get-user`, {
       method: "GET",
       headers: {
