--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 
 <!--<footer><a id="logout" href="#">Log out</a> </footer>-->
 
+<script src="config.js"></script>
 <script>
     document.getElementById("logout").addEventListener("click", function (e) {
         e.preventDefault();
