--- a/new-note.html
+++ b/new-note.html
@@ -24,6 +24,7 @@
 </div>
 
 <footer><a id="logout" href="#">Log out</a> </footer>
+<script src="config.js"></script>
 <script>
 
   const userToken = localStorage.getItem("userToken");
@@ -46,7 +47,7 @@
     submitBtn.disabled = true;
     submitBtn.textContent = "Submitting...";
 
-    const BASE_URL = import.meta.env.VITE_API_BASE_URL; // for Vite/ES Modules;
+    // const BASE_URL = import.meta.env.VITE_API_BASE_URL; // for Vite/ES Modules;
     fetch(`${BASE_URL}/note/create`, {
       method: "POST",
       headers: {"Content-Type": "application/json",
