--- a/profile.html
+++ b/profile.html
@@ -36,6 +36,7 @@
 
 <footer><a id="logout" href="#">Log out</a> </footer>
 
+<script src="config.js"></script>
 <script>
 
   const userToken = localStorage.getItem("userToken");
@@ -46,7 +47,7 @@
     window.location.href = "signin.html"; // Not signed in
   }
 
-  const BASE_URL = import.meta.env.VITE_API_BASE_URL; // for Vite/ES Modules;
+  // const BASE_URL = import.meta.env.VITE_API_BASE_URL; // for Vite/ES Modules;
   fetch(`${BASE_URL}/user/get-user`, {
     method: "GET",
     headers: {"Content-Type": "application/json",
@@ -79,7 +80,7 @@
     submitBtn.disabled = true;
     submitBtn.textContent = "Submitting...";
 
-    const BASE_URL = import.meta.env.VITE_API_BASE_URL; // for Vite/ES Modules;
+    // const BASE_URL = import.meta.env.VITE_API_BASE_URL; // for Vite/ES Modules;
     fetch(`${BASE_URL}/user/update-password`, {
       method: "PATCH",
       headers: {"Content-Type": "application/json",
