--- a/signup.html
+++ b/signup.html
@@ -26,6 +26,7 @@
 </div>
 
 <!--<footer><a id="logout" href="#">Log out</a> </footer>-->
+<script src="config.js"></script>
 <script>
   document.getElementById("signupForm").addEventListener("submit", function (e) {
     e.preventDefault();
@@ -39,7 +40,7 @@
     submitBtn.disabled = true;
     submitBtn.textContent = "Creating Account...";
 
-    const BASE_URL = import.meta.env.VITE_API_BASE_URL; // for Vite/ES Modules;
+    // const BASE_URL = import.meta.env.VITE_API_BASE_URL; // for Vite/ES Modules;
     fetch(`${BASE_URL}/user/create`, {
       method: "POST",
       headers: {"Content-Type": "application/json",
